--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "homepage": "http://angular-ui.github.com",
   "main": "src/calendar.js",
   "dependencies": {
-    "fullcalendar": "~2.9.1"
+    "fullcalendar": "^3.7.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -30,6 +30,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/angular-ui/ui-calendar.git"
+    "url": "git:/github.com/TIME2TRI/ui-calendar.git"
   }
 }
